<resources>
    <string name="app_name">Study Manager</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">DashBoard</string>
    <string name="menu_gallery">My Collection</string>
    <string name="menu_slideshow">Event Reminder</string>

    <string name="menu_request">MyRequest</string>
    <string name="menu_tools">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string-array name="categories">
        <item>Quiz</item>
        <item>Assignment</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
